...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_caesar_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_scytale_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_onetimepad_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_des_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_aes_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_rc_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_rsa_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_elgamal_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_ec_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_md_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_sha_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_hmac_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_ds_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                            android:gravity="center">
                            <Button
                                android:id="@+id/fnh_stega_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
