...
                android:id="@+id/dad_header_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/custom_round_gradient_color_red1" />
            <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandBold
                android:id="@+id/dad_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_name_caesar"
                android:textColor="@color/colorWhite1"
                android:textSize="@dimen/font_bold_medium"
                android:gravity="center"
...
                        android:paddingLeft="@dimen/component_padding_medium"
                        android:paddingBottom="@dimen/component_padding_standard"
                        android:layout_marginRight="@dimen/component_margin_small"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/dad_button_try"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/button_try"
                android:textSize="@dimen/button_text_size_large"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
...
