...
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_app_info"
                    android:padding="@dimen/component_padding_large"/>
                <Button
                    android:id="@+id/am_btn_app_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
...
